--- a/EasyDialogsExample/Base.lproj/Main.storyboard
+++ b/EasyDialogsExample/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16F73" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16G29" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12118"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12120"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
     </dependencies>
@@ -688,14 +688,14 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vb6-46-Mlf">
-                                <rect key="frame" x="5" y="5" width="470" height="218"/>
+                                <rect key="frame" x="15" y="15" width="450" height="198"/>
                             </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Vb6-46-Mlf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="5" id="0HM-eS-qsD"/>
-                            <constraint firstAttribute="bottom" secondItem="Vb6-46-Mlf" secondAttribute="bottom" constant="5" id="V6e-os-aG2"/>
-                            <constraint firstItem="Vb6-46-Mlf" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="5" id="gqD-kZ-BoW"/>
-                            <constraint firstAttribute="trailing" secondItem="Vb6-46-Mlf" secondAttribute="trailing" constant="5" id="rTS-hQ-O9H"/>
+                            <constraint firstItem="Vb6-46-Mlf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="15" id="0HM-eS-qsD"/>
+                            <constraint firstAttribute="bottom" secondItem="Vb6-46-Mlf" secondAttribute="bottom" constant="15" id="V6e-os-aG2"/>
+                            <constraint firstItem="Vb6-46-Mlf" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="gqD-kZ-BoW"/>
+                            <constraint firstAttribute="trailing" secondItem="Vb6-46-Mlf" secondAttribute="trailing" constant="15" id="rTS-hQ-O9H"/>
                         </constraints>
                     </view>
                     <connections>
