Add scroll view for forms

--- a/EasyDialogsExample/Base.lproj/Main.storyboard
+++ b/EasyDialogsExample/Base.lproj/Main.storyboard
@@ -687,7 +687,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="228"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vb6-46-Mlf">
+                            <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="1" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vb6-46-Mlf">
                                 <rect key="frame" x="15" y="15" width="450" height="198"/>
                             </stackView>
                         </subviews>
